# dovecot_encrypt

./: Makefile  Makefile.am  Makefile.in  README.md  encrypt-plugin.c  encrypt-plugin.h  istream-encrypt.c  istream-encrypt.h  lib20_encrypt_plugin.la  ostream-encrypt.c  ostream-encrypt.h  z.sh
